--- a/FurnitureConfigurator/cs/FurnitureConfigurator.csproj
+++ b/FurnitureConfigurator/cs/FurnitureConfigurator.csproj
@@ -49,7 +49,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,30 +61,89 @@
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Xarial.XCad, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.0.7.5-20210803.3\lib\net461\Xarial.XCad.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.0.7.5-20210804.2\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5-20210803.3\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.Toolkit, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5-20210803.3\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5-20210804.2\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CabinetConfiguratorMacroFeatureDefinition.cs" />
+    <Compile Include="CabinetConfiguratorPage.cs" />
     <Compile Include="CabinetConfiguratorService.cs" />
+    <Compile Include="CabinetSizeData.cs" />
+    <Compile Include="CabinetSizeGroup.cs" />
     <Compile Include="FurnitureConfiguratorSwAddIn.cs" />
+    <Compile Include="OrderControl.xaml.cs">
+      <DependentUpon>OrderControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="OrderItemStatus_e.cs" />
+    <Compile Include="OrderItemVM.cs" />
+    <Compile Include="OrderVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cabinet-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\depth.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\drawers-count.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\drawer-width.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\height.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\width.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\door-handle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="OrderControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\cart.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\status-custom.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\status-out-of-stock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\status-available.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5-20210803.3\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210803.3\build\Xarial.XCad.SolidWorks.targets')" />
+  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210803.3\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5-20210803.3\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
 </Project>
