--- a/FurnitureConfigurator/Tests/Tests.csproj
+++ b/FurnitureConfigurator/Tests/Tests.csproj
@@ -11,10 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.7.5-20210804.2" />
+    <PackageReference Include="Xarial.XCad" Version="0.7.5-20210805.1" />
+    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.7.5-20210805.1" />
   </ItemGroup>
 
   <ItemGroup>
