--- a/FurnitureConfigurator/cs/FurnitureConfigurator.csproj
+++ b/FurnitureConfigurator/cs/FurnitureConfigurator.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -33,6 +34,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="SolidWorks.Interop.sldworks, Version=28.1.0.74, Culture=neutral, PublicKeyToken=7c4797c3e4eeac03, processorArchitecture=MSIL">
@@ -48,6 +58,7 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -61,37 +72,60 @@
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Xarial.XCad, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.0.7.5-20210804.2\lib\net461\Xarial.XCad.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.0.7.5-20210805.1\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5-20210805.1\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.Toolkit, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5-20210804.2\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5-20210805.1\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="Xarial.XToolkit, Version=0.2.20.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>packages\Xarial.XToolkit.0.2.20\lib\net461\Xarial.XToolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="Xarial.XToolkit.Wpf, Version=0.2.20.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
+      <HintPath>packages\Xarial.XToolkit.Wpf.0.2.20\lib\net461\Xarial.XToolkit.Wpf.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CabinetConfiguratorMacroFeatureDefinition.cs" />
     <Compile Include="CabinetConfiguratorPage.cs" />
-    <Compile Include="CabinetConfiguratorService.cs" />
+    <Compile Include="DAL\DbDoor.cs" />
+    <Compile Include="DAL\DbDrawer.cs" />
+    <Compile Include="DAL\DbHandle.cs" />
+    <Compile Include="DAL\DbFrame.cs" />
+    <Compile Include="DAL\DbPanel.cs" />
+    <Compile Include="DAL\FurnitureDbContext.cs" />
+    <Compile Include="Services\CabinetConfiguratorService.cs" />
     <Compile Include="CabinetSizeData.cs" />
     <Compile Include="CabinetSizeGroup.cs" />
     <Compile Include="FurnitureConfiguratorSwAddIn.cs" />
     <Compile Include="OrderControl.xaml.cs">
       <DependentUpon>OrderControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="OrderItemStatus_e.cs" />
-    <Compile Include="OrderItemVM.cs" />
-    <Compile Include="OrderVM.cs" />
+    <Compile Include="Enums\OrderItemStatus_e.cs" />
+    <Compile Include="Enums\HandleType_e.cs" />
+    <Compile Include="ViewModels\OrderItemVM.cs" />
+    <Compile Include="ViewModels\OrderVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -138,12 +172,16 @@
   <ItemGroup>
     <Resource Include="Resources\status-available.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5-20210804.2\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210805.1\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5-20210805.1\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
+  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5-20210805.1\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210805.1\build\Xarial.XCad.SolidWorks.targets')" />
 </Project>
