--- a/FurnitureConfigurator/cs/packages.config
+++ b/FurnitureConfigurator/cs/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xarial.XCad" version="0.7.5-20210804.2" targetFramework="net461" />
-  <package id="Xarial.XCad.SolidWorks" version="0.7.5-20210804.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Xarial.XCad" version="0.7.5-20210805.1" targetFramework="net461" />
+  <package id="Xarial.XCad.SolidWorks" version="0.7.5-20210805.1" targetFramework="net461" />
   <package id="Xarial.XCad.SolidWorks.Interops" version="0.3.0" targetFramework="net461" />
-  <package id="Xarial.XCad.Toolkit" version="0.7.5-20210804.2" targetFramework="net461" />
+  <package id="Xarial.XCad.Toolkit" version="0.7.5-20210805.1" targetFramework="net461" />
+  <package id="Xarial.XToolkit" version="0.2.20" targetFramework="net461" />
+  <package id="Xarial.XToolkit.Wpf" version="0.2.20" targetFramework="net461" />
 </packages>
