--- a/FurnitureConfigurator/Tests/Tests.csproj
+++ b/FurnitureConfigurator/Tests/Tests.csproj
@@ -15,8 +15,8 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Xarial.XCad" Version="0.7.5-20210805.1" />
-    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.7.5-20210805.1" />
+    <PackageReference Include="Xarial.XCad" Version="0.7.5" />
+    <PackageReference Include="Xarial.XCad.SolidWorks" Version="0.7.5" />
   </ItemGroup>
 
   <ItemGroup>
