--- a/PMPage/cs/PMPage.csproj
+++ b/PMPage/cs/PMPage.csproj
@@ -61,13 +61,13 @@
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Xarial.XCad, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.0.7.5-20210923.2\lib\net461\Xarial.XCad.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.0.7.5\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5-20210923.2\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.5\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.Toolkit, Version=0.7.5.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5-20210923.2\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.Toolkit.0.7.5\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -121,19 +121,12 @@
     </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.0-20210428.1\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.0-20210428.1\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.0-20210428.1\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.0-20210428.1\build\Xarial.XCad.SolidWorks.targets'))" />
-<<<<<<< Updated upstream
     <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets')" />
-=======
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210923.2\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.5-20210923.2\build\Xarial.XCad.SolidWorks.targets'))" />
-  </Target>
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5-20210923.2\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5-20210923.2\build\Xarial.XCad.SolidWorks.targets')" />
->>>>>>> Stashed changes
+  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.5\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.5\build\Xarial.XCad.SolidWorks.targets')" />
 </Project>
