--- a/CommandGroupIcons/cs/CommandIcons/CommandIcons.csproj
+++ b/CommandGroupIcons/cs/CommandIcons/CommandIcons.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FF980277-F8A5-4A5E-925E-16244360A6FA}</ProjectGuid>
+    <ProjectGuid>{10EDD60F-4D5E-4F16-90E0-CD5DECE325BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xarial.XCad.Examples.PMPage.CSharp</RootNamespace>
-    <AssemblyName>PMPage</AssemblyName>
+    <RootNamespace>Xarial.Examples.XCad.CommandIcons</RootNamespace>
+    <AssemblyName>CommandIcons</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -36,22 +36,21 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="SolidWorks.Interop.sldworks, Version=28.1.0.74, Culture=neutral, PublicKeyToken=7c4797c3e4eeac03, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.sldworks.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.sldworks.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swconst, Version=28.1.0.74, Culture=neutral, PublicKeyToken=19f43e188e4269d8, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.swconst.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.swconst.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swpublished, Version=28.1.0.74, Culture=neutral, PublicKeyToken=89a97bdc5284e6d8, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.swpublished.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.3.0\lib\net40\SolidWorks.Interop.swpublished.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,50 +60,25 @@
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Xarial.XCad, Version=0.7.12.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.0.7.12\lib\net461\Xarial.XCad.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.0.7.12\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.SolidWorks, Version=0.7.12.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.SolidWorks.0.7.12\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.SolidWorks.0.7.12\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.Toolkit, Version=0.7.12.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>packages\Xarial.XCad.Toolkit.0.7.12\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+      <HintPath>..\packages\Xarial.XCad.Toolkit.0.7.12\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Page\Groups\AdvancedSelectionBoxGroup.cs" />
-    <Compile Include="Page\Tabs\BehaviorTab.cs" />
-    <Compile Include="Page\Groups\ControlsCustomizationGroup.cs" />
-    <Compile Include="Controls\WinFormsUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\WinFormsUserControl.Designer.cs">
-      <DependentUpon>WinFormsUserControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\WpfUserControl.xaml.cs">
-      <DependentUpon>WpfUserControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Page\Groups\CustomControlsGroup.cs" />
-    <Compile Include="Page\Groups\DependencyControlsGroup.cs" />
-    <Compile Include="Page\Groups\DynamicControlsGroup.cs" />
-    <Compile Include="Page\Groups\ReactiveControlsGroup.cs" />
-    <Compile Include="Page\Tabs\AdvancedControlsTab.cs" />
-    <Compile Include="Page\Groups\ItemSourceControlsGroup.cs" />
-    <Compile Include="PMPageAddIn.cs" />
-    <Compile Include="Page\PMPageDataModel.cs" />
+    <Compile Include="CommandIconsSwAddIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Page\Groups\SimpleControlsGroup.cs" />
-    <Compile Include="Page\Tabs\ControlsTab.cs" />
-    <Compile Include="Page\Groups\ToggleGroup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Controls\WinFormsUserControl.resx">
-      <DependentUpon>WinFormsUserControl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -112,21 +86,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\xarial.png" />
+    <None Include="Resources\electric-drill.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Controls\WpfUserControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <None Include="Resources\electric-screwdriver.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\power-saw.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('..\packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.4\build\Xarial.XCad.SolidWorks.targets'))" />
-    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('..\packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
-  <Import Project="packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.7.12\build\Xarial.XCad.SolidWorks.targets')" />
 </Project>
