--- a/DynamicPMPageControls/cs/DynamicPMPageControls.csproj
+++ b/DynamicPMPageControls/cs/DynamicPMPageControls.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{10EDD60F-4D5E-4F16-90E0-CD5DECE325BA}</ProjectGuid>
+    <ProjectGuid>{4FB743A3-BD2A-4BE2-94B1-35137E1B1C73}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xarial.Examples.XCad.CommandIcons</RootNamespace>
-    <AssemblyName>CommandIcons</AssemblyName>
+    <RootNamespace>DynamicPMPageControls</RootNamespace>
+    <AssemblyName>DynamicPMPageControls</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -36,20 +36,19 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="SolidWorks.Interop.sldworks, Version=30.0.0.5041, Culture=neutral, PublicKeyToken=7c4797c3e4eeac03, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.sldworks.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.sldworks.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swconst, Version=30.0.0.5041, Culture=neutral, PublicKeyToken=19f43e188e4269d8, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.swconst.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.swconst.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swpublished, Version=30.0.0.5041, Culture=neutral, PublicKeyToken=89a97bdc5284e6d8, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.swpublished.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.Interops.0.4.0\lib\net40\SolidWorks.Interop.swpublished.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,46 +59,29 @@
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Xarial.XCad, Version=0.8.0.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.0.8.0-20220627.1\lib\net461\Xarial.XCad.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.0.8.0-20220406.4\lib\net461\Xarial.XCad.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.SolidWorks, Version=0.8.0.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.SolidWorks.0.8.0-20220627.1\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.SolidWorks.0.8.0-20220406.4\lib\net461\Xarial.XCad.SolidWorks.dll</HintPath>
     </Reference>
     <Reference Include="Xarial.XCad.Toolkit, Version=0.8.0.0, Culture=neutral, PublicKeyToken=60dcaf351d4060db, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xarial.XCad.Toolkit.0.8.0-20220627.1\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
+      <HintPath>packages\Xarial.XCad.Toolkit.0.8.0-20220406.4\lib\net461\Xarial.XCad.Toolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandIconsSwAddIn.cs" />
+    <Compile Include="DynamicPMPageControlsAddIn.cs" />
+    <Compile Include="PMPageData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\electric-drill.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\electric-screwdriver.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\power-saw.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Xarial.XCad.SolidWorks.0.8.0-20220627.1\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('..\packages\Xarial.XCad.SolidWorks.0.8.0-20220627.1\build\Xarial.XCad.SolidWorks.targets')" />
+  <Import Project="packages\Xarial.XCad.SolidWorks.0.8.0-20220406.4\build\Xarial.XCad.SolidWorks.targets" Condition="Exists('packages\Xarial.XCad.SolidWorks.0.8.0-20220406.4\build\Xarial.XCad.SolidWorks.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Xarial.XCad.SolidWorks.0.8.0-20220627.1\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xarial.XCad.SolidWorks.0.8.0-20220627.1\build\Xarial.XCad.SolidWorks.targets'))" />
+    <Error Condition="!Exists('packages\Xarial.XCad.SolidWorks.0.8.0-20220406.4\build\Xarial.XCad.SolidWorks.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xarial.XCad.SolidWorks.0.8.0-20220406.4\build\Xarial.XCad.SolidWorks.targets'))" />
   </Target>
 </Project>
